syntax = "proto3";

package vortech.stream_management.health;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "api/v1/health;health";

// TODO Health: temporary service, will remove when add HealthServer middleware
service Health {
  // Get the current status of the stream management service.
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {
    option (google.api.http) = {get: "/v1/management/status"};
  }
}

message GetStatusRequest {}

message GetStatusResponse {
  string status = 1;
}
